feat: special character validation added

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/luizphelip3/test-application#readme",
   "dependencies": {
     "tsc": "^2.0.4",
+    "tsconfig": "^7.0.0",
     "tsx": "^3.4.2",
     "yarn": "^1.22.18"
   },
