--- a/package.json
+++ b/package.json
@@ -1,29 +1,16 @@
 {
-  "name": "test-application",
+  "name": "password-validator",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
+  "license": "MIT",
   "scripts": {
+    "build": "tsc",
+    "start": "npm run build && node dist/index.js",
+    "dev": "ts-node-dev src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/luizphelip3/test-application.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/luizphelip3/test-application/issues"
-  },
-  "homepage": "https://github.com/luizphelip3/test-application#readme",
-  "dependencies": {
-    "tsc": "^2.0.4",
-    "tsconfig": "^7.0.0",
-    "tsx": "^3.4.2",
-    "yarn": "^1.22.18"
-  },
   "devDependencies": {
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.2"
-  },
-  "type":"module"
+  }
 }
