--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
+    "test": "jest",
     "build": "tsc",
     "start": "npm run build && node dist/index.js",
-    "dev": "ts-node-dev src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "ts-node-dev src/index.ts"
   },
   "devDependencies": {
+    "@types/jest": "^28.1.0",
+    "jest": "^28.1.0",
+    "ts-jest": "^28.0.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.2"
   }
